--- a/index.html
+++ b/index.html
@@ -33,21 +33,20 @@
   <section class="card">
     <h2>Kontakt & Betreiber</h2>
     <p><strong>Betreiber:</strong> MatchingFlo</p>
-    <p><strong>Kontakt-E-Mail:</strong> <a href="mailto:deinname@example.com">deinname@example.com</a>  ← bitte ersetzen</p>
-    <p><strong>Business Telefonnummer:</strong> +49 123 4567890 ← optional</p>
+    <p><strong>Kontakt-E-Mail:</strong> <a href="mailto:ffeier@gmx.de">ffeier@gmx.de</a> </p>
   </section>
 
   <section class="card">
     <h2>Impressum</h2>
     <p>MatchingFlo<br>
-    Inhaber: Vorname Nachname<br>
-    Adresse: Musterstraße 1, 12345 Stadt, Land</p>
+    Inhaber: Florian Feier<br>
+    Adresse: Märzgasse 6, 69117 Heidelberg, Deutschland</p>
     <p>Alle Angaben auf dieser Seite sind für die Zwecke der Meta/WhatsApp Business Verifikation bestimmt.</p>
   </section>
 
   <section class="card">
     <h2>Datenschutz (Kurz)</h2>
-    <p>Wir speichern nur temporär Spielzustände und anonyme Session-Statistiken. Für Support / Löschanfragen schreibe an <a href="mailto:deinname@example.com">deinname@example.com</a>.</p>
+    <p>Wir speichern nur temporär Spielzustände und anonyme Session-Statistiken. Für Support / Löschanfragen schreibe an <a href="mailto:ffeier@gmx.de">ffeier@gmx.de</a>.</p>
     <p>Volle Datenschutzdetails: <a href="privacy.html">privacy policy</a> (kurze Version).</p>
   </section>
 
