--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Privacy — MatchingFlo</title></head>
 <body style="font-family:system-ui,Arial;padding:24px;max-width:900px;margin:auto">
   <h1>Datenschutzerklärung — Kurzfassung</h1>
-  <p>MatchingFlo speichert nur kurzzeitig Spielzustände und anonyme Session-Statistiken zur Verbesserung des Spiels. Persönliche Daten werden nicht an Dritte verkauft. Kontakt: <a href="mailto:deinname@example.com">deinname@example.com</a>.</p>
+  <p>MatchingFlo speichert nur kurzzeitig Spielzustände und anonyme Session-Statistiken zur Verbesserung des Spiels. Persönliche Daten werden nicht an Dritte verkauft. Kontakt: <a href="mailto:ffeier@gmx.de">ffeier@gmx.de</a>.</p>
   <p>Wenn du vollständige Datenschutzerklärung benötigst, schreibe an obige E-Mail.</p>
 </body>
 </html>
