--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </head>
 <body>
   <header>
-    <h1>MatchingFloBot</h1>
-    <p>Ein privates Software-Projekt von <strong>Florian Feier</strong></p>
+    <h1>Florian Feier</h1>
+    <p>MatchingFloBot ist ein privates Software-Projekt von <strong>Florian Feier</strong></p>
   </header>
 
   <section>
