--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       Verantwortlich für diese Website:  
       <br>Florian Feier  
       <br>Einzelunternehmer / Privatperson  
+      <br>Märzgasse 6
+      <br>69117 Heidelberg
+      <br>Deutschland
       <br>E-Mail: <a href="mailto:ffeier@gmx.de">ffeier@gmx.de</a>
     </p>
     <p>
