--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <br>Florian Feier  
       <br>Einzelunternehmer / Privatperson  
       <br>Märzgasse 6
-      <br>69117 Heidelberg
+      <br>Heidelberg, Baden-Württemberg 69117
       <br>Deutschland
       <br>E-Mail: <a href="mailto:ffeier@gmx.de">ffeier@gmx.de</a>
     </p>
